# Functional-MPI-Wrapper

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  cmake.sh  raw_to_f90.py  raw_to_src.py  run_examples_mpifort.py
examples/: bcast_example.f90  reduces_example.f90  send_example.f90
raw/: raw_mod_allreduce.f90  raw_mod_broadcast.f90  raw_mod_mpifw.f90  raw_mod_reduce.f90  raw_mod_send.f90  raw_smod_allreduce.f90  raw_smod_broadcast.f90  raw_smod_common.f90  raw_smod_reduce.f90  raw_smod_send.f90
src/: mod_allreduce.f90  mod_broadcast.f90  mod_common.f90  mod_mpi_wrapper.f90  mod_mpifw.f90  mod_reduce.f90  mod_send.f90  smod_allreduce.f90  smod_broadcast.f90  smod_common.f90  smod_reduce.f90  smod_send.f90
